test/sparse/domains/emptyFirst.good
1
emptyFirst.chpl:5: error: halt reached - 'first' is invoked on an empty sparse domain
