test/sparse/domains/emptyFirst.chpl

var DR = {1..10};
var SS: sparse subdomain(DR);
writeln(DR.first);
writeln(SS.first); // undefined behavior; currently an error
